welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: expected class or object definition
def parcoursdiag(diag : Int, cpt : Int): Int={
^Diagonal:25: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:28: error: expected start of definition
	override def forward()  {
                 ^Diagonal:31: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:34: error: expected start of definition
	override def backward() {
                 ^Diagonal:37: error: Unmatched closing brace '}' ignored here
}
^